--- a/templates/index.html
+++ b/templates/index.html
@@ -121,6 +121,9 @@
         <div class="friends-link">
             <a href="/view-subscrives">подписки</a>
         </div>
+        <div class="friends-link">
+            <a href="/get-chats">чаты</a>
+        </div>
     </div>
 </div>
 
