--- a/templates/tweets.html
+++ b/templates/tweets.html
@@ -83,6 +83,9 @@
                 <div class="friends-link">
                     <a href="/view-subscrives">подписки</a>
                 </div>
+                <div class="friends-link">
+                    <a href="/get-chats">чаты</a>
+                </div>
             </div>
         </div>
         
