--- a/templates/allChats.html
+++ b/templates/allChats.html
@@ -72,3 +72,11 @@
     </div>
 </body>
 </html>
+
+<!-- type Chat struct {
+	ChatID    int    `json:"chat_id"`
+	UserID1   int    `json:"user_id1"`
+	UserID2   int    `json:"user_id2"`
+	UserName1 string `json:"username1"`
+	UserName2 string `json:"username2"`
+} -->
