сделана часть функционала для груп

--- a/templates/LoginPage.html
+++ b/templates/LoginPage.html
@@ -58,7 +58,7 @@
 
     <div class="login-container">
         <h1>Вход в Twitter</h1>
-        <form method="post" action="/login-method">
+        <form method="post" action="/login">
             <input type="text" name="username" placeholder="Имя пользователя" required>
             <input type="password" name="password" placeholder="Пароль" required>
             <button type="submit">Войти</button>
