--- a/templates/RegisterPage.html
+++ b/templates/RegisterPage.html
@@ -52,7 +52,7 @@
 <body>
     <div class="registration-container">
         <h1>Регистрация</h1>
-        <form method="post" action="/register-new-user">
+        <form method="post" action="/register">
             <input type="text" name="newUserName" placeholder="Имя пользователя" required>
             <input type="password" name="newUserPassword" placeholder="Пароль" required>
             <button class="register-button">Зарегистрироваться</button>
