--- a/templates/index.html
+++ b/templates/index.html
@@ -101,7 +101,7 @@
 <header>
     <h1>Мой Твиттер</h1>
     <button class="login-button">
-        <a href="/login-page">Войти</a>
+        <a href="/login">Войти</a>
     </button> <!-- Кнопка входа -->
 </header>
 
@@ -113,7 +113,7 @@
             <a href="/search-users">поиск</a>
         </div>
         <div class="friends-link">
-            <a href="#">сообщества</a>
+            <a href="/groups">сообщества</a>
         </div>
         <div class="friends-link">
             <a href="/follow-page">подписаться</a>
