--- a/templates/NewGroupPage.html
+++ b/templates/NewGroupPage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Вход в систему</title>
+    <title>создание группы</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -14,7 +14,7 @@
             align-items: center;
             height: 100vh;
         }
-        .login-container {
+        .registration-container {
             text-align: center;
             background-color: white;
             border-radius: 8px;
@@ -26,7 +26,15 @@
             color: #1da1f2;
             margin-bottom: 20px;
         }
-        .login-button {
+        input {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+        .register-button {
             background-color: #1da1f2;
             color: white;
             border: none;
@@ -36,22 +44,19 @@
             cursor: pointer;
             transition: background-color 0.3s;
         }
-        .login-button:hover {
+        .register-button:hover {
             background-color: #0e7abf;
         }
     </style>
 </head>
 <body>
-
-    <div class="login-container">
-        <h1>Добро пожаловать!</h1>
-        <button class="login-button">
-            <a href="/login">Войти</a>
-        </button>
-        <button class="login-button">
-            <a href="/register">зарегистрироваться</a>
-        </button>
-
+    <div class="registration-container">
+        <h1>создание группы</h1>
+        <form method="post" action="/create-new-group">
+            <input type="text" name="group-name" placeholder="Имя пользователя" required>
+            <input type="text" name="group-description" placeholder="описание группы" required >
+            <button class="register-button">создать группу</button>
+        </form>
     </div>
 
 </body>
