--- a/templates/index.html
+++ b/templates/index.html
@@ -113,7 +113,7 @@
             <a href="/search-users">поиск</a>
         </div>
         <div class="friends-link">
-            <a href="/groups">сообщества</a>
+            <a href="/get-all-groups">сообщества</a>
         </div>
         <div class="friends-link">
             <a href="/follow-page">подписаться</a>
@@ -123,6 +123,9 @@
         </div>
         <div class="friends-link">
             <a href="/get-chats">чаты</a>
+        </div>
+        <div class="friends-link">
+            <a href="/create-new-post">опубликовать пост</a>
         </div>
     </div>
 </div>
