--- a/templates/PageForGroup.html
+++ b/templates/PageForGroup.html
@@ -139,6 +139,21 @@
             color: var(--text-secondary);
             font-size: 12px;
         }
+        .post-actions {
+            display: flex;
+            gap: 10px;
+            margin-top: 12px;
+        }
+        
+        .btn-admin {
+            background-color: #ff5722;
+            color: white;
+            border: none;
+            border-radius: 20px;
+            padding: 6px 12px;
+            cursor: pointer;
+            font-size: 14px;
+        }
     </style>
 </head>
 <body>
@@ -179,6 +194,13 @@
                     <div class="post-content">{{.PostContent}}</div>
                     <div class="post-date">Опубликовано: {{.CreatedAt}}</div>
                 </div>
+            {{if $.IsAdmin}}
+                <div class="post-action">
+                    <form action="/delete-group-post/{{$.ID}}/{{.PostID}}" method="post">
+                    <button class="btn-admin" type="submit">удалить запись</button>
+                </form>
+                </div>
+            {{end}}
             </div>
             {{else}}
             <div class="post">
