--- a/templates/ViewAllChatGroups.html
+++ b/templates/ViewAllChatGroups.html
@@ -56,9 +56,32 @@
         .chat-button:hover {
             background-color: #0d95e8;
         }
+        .sidebar {
+            width: 200px;
+            margin: 20px;
+            padding: 20px;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
     </style>
 </head>
 <body>
+    <div class="sidebar">
+        <div class="friends-link">
+            <a href="/home-page">мой профиль</a>
+        </div>
+        <div class="friends-link">
+            <a href="/search-users">поиск</a>
+        </div>
+        <div class="friends-link">
+            <a href="/get-all-groups">сообщества</a>
+        </div>
+        <div class="friends-link">
+            <a href="/get-chats">чаты</a>
+        </div>
+    </div>
+
     <h1>Ваши чаты</h1>
     <div class="chat-list">
         {{range .}}
