--- a/templates/chatPage.html
+++ b/templates/chatPage.html
@@ -100,9 +100,33 @@
             font-size: 12px; /* Размер шрифта для времени */
             color: #657786; /* Цвет для времени */
         }
+        .sidebar {
+            width: 200px;
+            margin: 20px;
+            padding: 20px;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
     </style>
 </head>
 <body>
+    <div class="sidebar">
+        <div class="friends-link">
+            <a href="/home-page">мой профиль</a>
+        </div>
+        <div class="friends-link">
+            <a href="/search-users">поиск</a>
+        </div>
+        <div class="friends-link">
+            <a href="/get-all-groups">сообщества</a>
+        </div>
+        <div class="friends-link">
+            <a href="/get-chats">чаты</a>
+        </div>
+    </div>
+
+
     <div id="chat">
         <div id="messages">
             <ul>
