--- a/templates/index.html
+++ b/templates/index.html
@@ -121,6 +121,9 @@
         <div class="friends-link">
             <a href="/create-new-post">опубликовать пост</a>
         </div>
+        <div class="friends-link">
+            <a href="/chat-groups">групповые чаты</a>
+        </div>
     </div>
 
 
